--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -838,6 +838,7 @@ font-size: 25px;
  
  color: black; 
 }
+/* drop */
 .dropbtn {
   
   display: block;
@@ -860,17 +861,13 @@ transition: all .4s;
     display: none;
     position: absolute;
     background-color: transparent;
-    /* background-color: #f1f1f1; */
     min-width: 130px;
-    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.8); */
-      /* display: block; */
     padding: 15px 0px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
     line-height: 14px;
-
     color: grey;
     cursor: pointer; 
     transition: all .4s;
@@ -886,10 +883,7 @@ transition: all .4s;
 	display: block;
 	box-shadow: 0 5px 5px 0 rgba(0,0,0, 0.2);
 	transition: all 0.3s;
-	/* opacity: 0;
-	visibility: hidden; */
-  /* opacity: 1;
-	visibility: visible; */
+
 }
 .dropbtn a:hover {
   color: darkslategray;
@@ -1039,7 +1033,7 @@ transition: all .4s;
  margin: 5px;
  padding: 5px;
  margin: 0 auto;
- /* background-color: #eee; */
+ 
  display: flex;
  justify-content: center;
  align-items: flex-start;
@@ -1077,7 +1071,6 @@ transition: all .4s;
 .card {
  max-width: 270px;
  width: 100%;
- /* border-left: 2px solid lightgrey; */
  padding: 5px;
  margin: 5px;
  background-color: #eee;
@@ -1360,6 +1353,7 @@ align-items: flex-start;
  max-width: 1200px;
  width: 100%;
 }
+/* footer */
 .social {
    background-color: black;
  
@@ -1399,8 +1393,9 @@ align-items: flex-start;
   max-width: 350px;
   width: 100%;
 }
+
 .subscribe-form-black {
-  /* position: relative; */
+  
 }
 .subscribe-form-black__btn {
     /* position: absolute;
@@ -1529,8 +1524,7 @@ color: grey;
   flex-wrap: wrap; 
   justify-content: space-between;
   align-items: center;
-    
-  
+      
   padding: 10px 5px 5px;
 }
 #toTop {
@@ -1769,24 +1763,17 @@ color: grey;
     }
     }
 .card-info__btn--tocart {
-      margin-bottom: 5px;
-
+    margin-bottom: 5px;
     width: 100%;
     height: 40px;
     font-weight: 600;
     font-size: 12px;
-    
     width: 100%;
-       /* @include xs380 {
-
-        width: 70%;
-      } */
     border: 2px solid black;
     border-radius: 2px;
     margin-top: 2px;
     background-color: transparent;  
     color: black;
-    
     transition: color 0.3s, background-color 0.3s;
 
     &:hover {
@@ -1794,20 +1781,8 @@ color: grey;
       background-color: black;
       transition: color 0.3s, background-color 0.3s;
     }
-
-    /*  */
-      /* color: var(--color-white);
-      background-color: var(--color-dark);
-
-      &:hover {
-        color: var(--color-dark);
-        background-color: #f2f2f2;
-        transition: color 0.3s, background-color 0.3s;
-      } */
-    }
+}
 .card-info__btn--towishlist {
-
-
       color: black;
       background-color: white;
       border: 1px solid #eee;
@@ -1817,17 +1792,7 @@ color: grey;
         transition: color 0.3s, background-color 0.3s;
       }
     }
-    /* &:hover {
-      svg {
-        fill: var(--color-dark);
-        transition: fill 0.3s;
-      }
-    } */
 
-    /* &--disabled {
-      opacity: 0.4;
-      pointer-events: none;
-    } */
   
 
 .stepper__input {
@@ -2247,8 +2212,7 @@ align-items: center;
     margin-bottom: 0rem;
 }
 .container-narrow {
-    /* display: flex;
-    justify-content: center; */
+  
   text-align: left;
   margin: 0 auto;
   padding: 0 ;
