--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,9 +3,17 @@
 /* Document
    ========================================================================== */
 
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
+.footer {
+  background: #34495e;
+  color: white;
+  text-align: center;
+  padding: 1.5rem 0;
+  margin-top: 2rem;
+}
  */
 
 @font-face {
@@ -1971,15 +1979,7 @@ form {
 
 }
 
-/* .card-info__btn38 {
-    margin-bottom: 5px;
 
-    width: 100%;
-    height: 40px;
-     font-weight: 500;
-      font-size: 12px;
-      line-height: 1.7px;
-    } */
 .card-info__btn {
   display: flex;
   justify-content: center;
@@ -2353,7 +2353,9 @@ form {
   min-height: 40px;
 }
 
-.loudspeakers {
+
+
+.cadetblue {
   background-color: cadetblue;
 }
 
@@ -2508,7 +2510,7 @@ form {
   width: 100%;
 }
 
-// -------------------------------------------------------------------
+
 .card__list {
 
   max-width: 1200px;
@@ -2653,4 +2655,16 @@ form {
   display: flex;
   justify-content: space-between;
   margin-left: auto;
+}
+
+/* blog */
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.blog-content__content {
+  max-width: 800px;
+  width: 100%;
 }
