--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -15,7 +15,114 @@
   margin-top: 2rem;
 }
  */
+    .product-card {
+        /* Делаем все карточки одинаковой высоты */
 
+      min-height: 350px;
+      /* Минимальная высота для выравнивания */
+      max-width: 500px;
+      width: 100%;
+      height: auto;
+      background: transparent;
+      border-radius: 2px;
+      padding: 0px;
+      /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
+      transition: all 0.3s ease;
+      cursor: pointer;
+      border: 0px solid #e0e0e0;
+      font-weight: 500;
+      font-size: 12px;
+      /* Основная магия - flex колонка с прижатым низом */
+      display: flex;
+      flex-direction: column;
+    }
+
+    .product-card:hover {
+      transform: translateZ(-15px);
+      box-shadow: 0 8px 10px rgba(45, 1, 1, 0.15);
+      /* border-color: #007bff; */
+    }
+
+    .product-image {
+      width: 100%;
+      height: auto;
+      background: linear-gradient(135deg, #1c1c1d 0%, #181818 100%);
+      border-radius: 2px;
+      margin-bottom: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    .product-title {
+      font-family: 'Jost';
+      font-size: 14px;
+      /* font-weight: 500; */
+      margin-bottom: 5px;
+      color: #333;
+      font-weight: 700;
+
+    }
+
+    .product-description {
+      font-family: 'Jost';
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 1.5;
+      color: #666;
+      margin-bottom: 5px;
+      flex: 1;
+      /* Описание растягивается, чтобы прижать нижний блок */
+    }
+
+    .product-bottom {
+      margin-top: auto;
+      /* Прижимаем к низу */
+      padding-top: 10px;
+      border-top: 0px solid #f0f0f0;
+
+    }
+
+
+
+    .product-image img {
+      width: 100%;
+      height: auto;
+      border-radius: 0px;
+      object-fit: cover;
+    }
+    .product-content {
+      padding-left: 30px;
+      padding-right: 30px;
+      /* margin-left: 10px; */
+      flex: 1;
+      /* Занимает все доступное пространство */
+      display: flex;
+      flex-direction: column;
+    }
+   .product-bottom {
+      margin-top: auto;
+      /* Прижимаем к низу */
+      padding-top: 10px;
+      border-top: 0px solid #f0f0f0;
+
+    }
+    .product-price {
+      font-family: 'Jost';
+      font-size: 18px;
+      font-weight: 700;
+      color: #011932;
+      margin-bottom: 2px;
+    }
+    .product-bottom-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
+    }
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
@@ -988,6 +1095,7 @@ li {
   font-size: 34px;
   color: #101c10;
   margin-top: 100px;
+  margin-bottom: 100px;
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #e7e2e2;
@@ -1308,7 +1416,8 @@ li {
 
 .grid-products__btn {
   text-align: left;
-  width: 900px;
+  max-width: 900px;
+  width: 100%;
   height: 40px;
   color: black;
   font-weight: 700;
