--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3147,6 +3147,22 @@ display: flex;
   max-width: 800px;
   width: 100%;
 }
+.grid-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
+  max-width: 1000px;
+  width: 100%;
+}
+@media(max-width: 768px) {
+.grid-2 {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 5px;
+  max-width: 700px;
+  width: 100%;
+
+}
 
 .grid-3 {
   display: grid;
