--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1068,7 +1068,7 @@ li {
 }
 
 .black {
-  font-family: 'Jost';
+  font-family: 'Rubik';
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -1246,10 +1246,10 @@ li {
 }
 
 .menu__title {
-  font-family: 'Jost';
+font-family: 'Rubik';
   font-style: normal;
   font-weight: 700;
-  font-size: 34px;
+  font-size: 24px;
   color: #101c10;
   margin-top: 100px;
   margin-bottom: 100px;
@@ -1965,7 +1965,9 @@ form {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   padding: 0 10px;
+  background: #f8f9fa;
 }
 
 .footer__navigation {
@@ -3154,6 +3156,7 @@ display: flex;
 }
 
 .grid-2 {
+  margin-top: 10px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 5px;
