--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1040,7 +1040,7 @@ li {
 }
 
 .mt-50 {
-  margin-top: -50px;
+  margin-top: 50px;
 }
 
 .mt-100 {
@@ -1951,6 +1951,7 @@ form {
   padding-top: 0.3rem;
   padding-bottom: 0.4rem;
   color: #636e74;
+  z-index: 10;
 
 }
 
